--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <commons.apache.version>2.4</commons.apache.version>
         <aspectj.version>1.8.7</aspectj.version>
         <derby.version>10.12.1.1</derby.version>
+        <hsqldb.version>2.3.3</hsqldb.version>
+
     </properties>
     
     <dependencies>
@@ -49,11 +51,21 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
         </dependency>
-        <!-- Derby DB -->
+        <!-- HyperSQL DB -->
         <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>${derby.version}</version>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
         </dependency>
-     </dependencies>
+        
+<!--          connection polls 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${dbcp.version}</version>
+        </dependency>-->
+        
+    </dependencies>
+    
+    
 </project>
